# 3d-engine

./: .gitignore  CMakeLists.txt  LocalCMakeLists.txt  WebCMakeLists.txt  main.cpp  olafmain.cpp  tempmain.cpp
assets/: run.sh
assets/glsl-shaders/: fragShader.frag  vertShader.vert
cmake-emscripten/: CMakeCache.txt  ECSEngine.html  ECSEngine.js  ECSEngine.wasm  Makefile  cmake_install.cmake
cmake-emscripten/assets/glsl-shaders/2d/: fragShader.frag  vertShader.vert
cmake-emscripten/assets/glsl-shaders/3d/: cube.frag  cube.vert
cmake-emscripten/cmakelists/emscripten/: Makefile  cmake_install.cmake
cmake-emscripten/src/: Makefile  cmake_install.cmake
cmake-emscripten/src/rendering/: Makefile  cmake_install.cmake
cmakelists/: CMakeLists.txt
cmakelists/emscripten/: CMakeLists.txt
cmakelists/linux/: CMakeLists.txt
cmakelists/local/: CMakeLists.txt
cmakelists/macos/: CMakeLists.txt
include/: Engine.hpp  OpenGL.h  gan_callbacks.hpp
include/beginner-api/: Book.hpp  OlafAPI.hpp
include/beginner-api/camera-controllers/: CamController.hpp  CamFPS.hpp  CamTPS.hpp
include/beginner-api/events/: EventDispatcher.hpp
include/beginner-api/factory/: ShapeFactory.hpp
include/beginner-api/factory/shapes/: Colors.hpp  ShapeAPI.hpp  ShapeUtils.hpp  shapedef.hpp
include/beginner-api/factory/shapes/raw-shapes/: Box3DRaw.hpp  Cylinder3DRaw.hpp  Prism3DRaw.hpp
include/beginner-api/factory/shapes/shape-apis/: Box3D.hpp  Cylinder3D.hpp  Prism3D.hpp
include/beginner-api/olaf-utilities/: CameraControl.hpp  CameraController.hpp  MultiObjectGeneration.hpp
include/core/: EngineCore.hpp
include/core/debug/: gan_err.hpp  gan_io.hpp  gan_log.hpp
include/core/filesystem/: filesystem.hpp  image.hpp  path.hpp
include/core/input/: InputUpdater.hpp  KeyboardState.hpp  KeypressTypeEnum.inl  MouseState.hpp
include/core/time/: Clock.hpp
include/ecs/components/: ComponentData.hpp
include/rendering/: RenderQueue.hpp  Renderer.hpp  Window.hpp
include/rendering/glFunctions/: glBuffers.hpp  glShaders.hpp  glTextures.hpp
include/rendering/glPrimitives/: glMesh.hpp  glVertex.hpp  glVertexBuffer.hpp  gl_defines.hpp
include/rendering/render-math/: Model.hpp  Transform.hpp
include/rendering/render-primitives/: FrameBuffer.hpp  Mesh.hpp  Model.hpp  Transform.hpp  Vertex.hpp  VertexBuffer.hpp
include/rendering/shaders/: Shader.hpp  ShaderManager.hpp  Uniforms.hpp
include/rendering/shaders-new/: ShaderManager.hpp
include/rendering/textures/: Texture.hpp  TextureRegister.hpp
include/scene/: Camera.hpp  Scene.hpp
include/types/custom-data-structures/: map_vector.hpp  ref_count.hpp
include/types/enums/: RenderingSettings.hpp
include/types/math/: dim2.hpp  fRect.hpp  rect.hpp
include/types/strings/: README.md
include/types/strings/fstring/: fstring.hpp  fstring.inl
include/types/strings/str_view/: str_subview.hpp  str_view.hpp  str_view.inl
src/: CMakeLists.txt  Engine.cpp
src/olaf-api/: EventDispatcher.cpp
src/rendering/: CMakeLists.txt  Renderer.cpp  Window.cpp
src/rendering/glFunctions/: glBuffers.cpp  glShaders.cpp  glTextures.cpp
src/rendering/shaders/: Shader.cpp  ShaderManager.cpp
src/rendering/shaders/builtin-fragment/: 2DTextureColorFragShader.cpp  3DColorFragShader.cpp
src/rendering/shaders/builtin-vertex/: 2DOrthographicVertexShader.cpp  3DPerspectiveVertexShader.cpp
src/rendering/texture/: TextureRegister.cpp
